--- a/trunk/SoundEffects/res/layout/activity_effect.xml
+++ b/trunk/SoundEffects/res/layout/activity_effect.xml
@@ -9,34 +9,47 @@
     tools:context=".EffectActivity" >
 
     <Button
-        android:id="@+id/btn_effect_speed"
+        android:id="@+id/btn_effect_cat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_record_again"
-        android:layout_marginLeft="25dp"
-        android:layout_toRightOf="@+id/btn_effect_normal"
-        android:text="@string/btn_effect_speed"
+        android:layout_above="@+id/btn_effect_fast"
+        android:layout_marginLeft="34dp"
+        android:layout_toRightOf="@+id/btn_effect_bird"
+        android:text="@string/btn_effect_cat"
         android:textSize="15sp"
         android:width="100dp" />
 
     <Button
-        android:id="@+id/btn_effect_normal"
+        android:id="@+id/btn_effect_fast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/btn_effect_normal"
-        android:textSize="15sp"
-        android:width="100dp" />
-
-    <Button
-        android:id="@+id/btn_record_again"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_effect_normal"
-        android:layout_alignRight="@+id/btn_effect_speed"
-        android:layout_below="@+id/btn_effect_normal"
+        android:layout_alignLeft="@+id/btn_effect_cat"
+        android:layout_below="@+id/btn_effect_bird"
         android:layout_marginTop="26dp"
-        android:text="@string/btn_record_again"
+        android:text="@string/btn_effect_fast"
+        android:textSize="15sp"
+        android:width="100dp" />
+
+    <Button
+        android:id="@+id/btn_effect_cow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btn_effect_fast"
+        android:layout_alignBottom="@+id/btn_effect_fast"
+        android:layout_toLeftOf="@+id/btn_effect_cat"
+        android:text="@string/btn_effect_cow"
+        android:textSize="15sp"
+        android:width="100dp" />
+
+    <Button
+        android:id="@+id/btn_effect_bird"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="46dp"
+        android:text="@string/btn_effect_bird"
         android:textSize="15sp"
         android:width="100dp" />
 
