--- a/trunk/SoundEffects/res/layout/activity_start.xml
+++ b/trunk/SoundEffects/res/layout/activity_start.xml
@@ -9,43 +9,29 @@
     tools:context=".StartActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/text_recording"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sound_effect" />
-
-    <Button
-        android:id="@+id/btn_effect_speed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_record"
-        android:layout_marginLeft="25dp"
-        android:layout_toRightOf="@+id/btn_effect_normal"
-        android:text="@string/btn_effect_speed"
-        android:textSize="15sp"
-        android:width="100dp" />
-
-    <Button
-        android:id="@+id/btn_effect_normal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="37dp"
-        android:text="@string/btn_effect_normal"
-        android:textSize="15sp"
-        android:width="100dp" />
+        android:text="@string/recording"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_effect_normal"
-        android:layout_alignRight="@+id/btn_effect_speed"
-        android:layout_below="@+id/btn_effect_normal"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:text="@string/btn_record"
         android:textSize="15sp"
+        android:width="100dp" />
+
+    <Button
+        android:id="@+id/btn_stop_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/btn_stop_record"
+        android:textSize="15sp"
+        android:visibility="invisible"
         android:width="100dp" />
 
 </RelativeLayout>
