--- a/SoundEffects/res/layout/activity_start.xml
+++ b/SoundEffects/res/layout/activity_start.xml
@@ -2,24 +2,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StartActivity" >
 
+    <vng.wmb.activity.WaveDrawer
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_record"
+        android:layout_below="@+id/btn_record"
+        android:layout_marginTop="18dp"
+        android:height="20dp"
+        android:soundEffectsEnabled="true" />
+
     <TextView
         android:id="@+id/text_recording"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recording"
-        android:visibility="invisible" />
+        android:layout_alignBaseline="@+id/btn_record"
+        android:layout_alignBottom="@+id/btn_record"
+        android:layout_marginLeft="29dp"
+        android:layout_toRightOf="@+id/btn_record"
+        android:textColor="#FFFFFF"
+        android:text="@string/recording" />
 
     <Button
         android:id="@+id/btn_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentTop="true"
         android:text="@string/btn_record"
         android:textSize="15sp"
         android:width="100dp" />
@@ -28,10 +43,10 @@
         android:id="@+id/btn_stop_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_above="@+id/drawer"
+        android:layout_alignLeft="@+id/btn_record"
         android:text="@string/btn_stop_record"
         android:textSize="15sp"
-        android:visibility="invisible"
         android:width="100dp" />
 
 </RelativeLayout>
