--- a/trunk/SoundEffects/res/layout/activity_effect.xml
+++ b/trunk/SoundEffects/res/layout/activity_effect.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_effect_cat"
             android:layout_below="@+id/btn_effect_original"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_fast"
             android:textSize="15sp"
             android:width="100dp" />
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/btn_effect_fast"
             android:layout_alignBottom="@+id/btn_effect_fast"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/btn_effect_cat"
             android:text="@string/btn_effect_cow"
             android:textSize="15sp"
@@ -51,10 +51,9 @@
             android:id="@+id/btn_effect_original"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/btn_action_send"
             android:layout_marginLeft="28dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_original"
             android:textSize="15sp"
             android:width="100dp" />
@@ -66,7 +65,7 @@
             android:layout_alignBaseline="@+id/btn_effect_bird"
             android:layout_alignBottom="@+id/btn_effect_bird"
             android:layout_alignLeft="@+id/btn_effect_fast"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_robot"
             android:textSize="15sp"
             android:width="100dp" />
@@ -76,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_effect_robot"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/btn_effect_cat"
             android:text="@string/btn_effect_dub_vader"
             android:textSize="15sp"
@@ -88,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_effect_robot"
             android:layout_below="@+id/btn_effect_robot"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_romance"
             android:textSize="15sp"
             android:width="100dp" />
@@ -99,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_effect_cow"
             android:layout_below="@+id/btn_effect_cow"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_bird"
             android:textSize="15sp"
             android:width="100dp" />
@@ -109,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_effect_romance"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/btn_effect_cat"
             android:text="@string/btn_effect_mic"
             android:textSize="15sp"
@@ -121,7 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_effect_romance"
             android:layout_below="@+id/btn_effect_romance"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_techtronic"
             android:textSize="15sp"
             android:width="100dp" />
@@ -131,7 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_effect_techtronic"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/btn_effect_cat"
             android:text="@string/btn_effect_stage"
             android:textSize="15sp"
@@ -143,10 +142,21 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/btn_effect_techtronic"
             android:layout_below="@+id/btn_effect_techtronic"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/btn_effect_dub"
             android:textSize="15sp"
             android:width="100dp" />
+
+        <Button
+            android:id="@+id/btn_action_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/btn_action_send"
+            android:textSize="15sp"
+            android:width="150dp" />
+
     </RelativeLayout>
 
 </ScrollView>
